Fix x axis overflow issue from spring

--- a/frontend/src/containers/NotableSummoners/NotableSummoners.scss
+++ b/frontend/src/containers/NotableSummoners/NotableSummoners.scss
@@ -2,6 +2,7 @@
   margin-top: 40px;
   text-align: center;
   color: #05212A;
+  overflow-x: hidden;
 
   .content-loader {
     display: flex;
