--- a/frontend/src/containers/SummonerSearch/SummonerSearch.scss
+++ b/frontend/src/containers/SummonerSearch/SummonerSearch.scss
@@ -1,5 +1,6 @@
 .summoner-search-section {
   height: 100vh;
+  overflow-x: hidden;
 
   .container {
     position: relative;
